force-app/main/default/objects/Einvoice_Line__c/Einvoice_Line__c.object-meta.xml
<CustomObject>
    <label>Einvoice Line</label>
    <nameField>
        <label>Einvoice Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Einvoice Line</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>