force-app/main/default/objects/Einvoice_Line__c/fields/Currency_Type__c.field-meta.xml
<CustomField>
    <fullName>Currency_Type__c</fullName>
    <description>Định nghĩa loại tiền tệ trên report manual Einvoice</description>
    <label>Currency Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>