force-app/main/default/objects/Einvoice_Line__c/fields/Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent__c</fullName>
    <formula>100  - ( DiscountedAmount__c  /  ProdPrice__c  * 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>