force-app/main/default/objects/Einvoice_Line__c/fields/DiscountedAmount__c.field-meta.xml
<CustomField>
    <fullName>DiscountedAmount__c</fullName>
    <formula>Amount__c /  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DiscountedAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>