force-app/main/default/objects/Einvoice_Line__c/fields/Don_Gia__c.field-meta.xml
<CustomField>
    <fullName>Don_Gia__c</fullName>
    <formula>Product__r.Std_Retail_Price__c   / (1+ (Einvoice__r.VATRate__c  / 100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Don Gia 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>