force-app/main/default/objects/Einvoice_Line__c/fields/Einvoice__c.field-meta.xml
<CustomField>
    <fullName>Einvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Einvoice</label>
    <referenceTo>Einvoice__c</referenceTo>
    <relationshipLabel>Einvoice Line</relationshipLabel>
    <relationshipName>Einvoice_Line</relationshipName>
    <type>Lookup</type>
</CustomField>