force-app/main/default/objects/Einvoice_Line__c/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <description>Định nghĩa tỉ lệ chuyển đổi trên report manual Einvoice</description>
    <label>Exchange Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>