force-app/main/default/objects/Einvoice_Line__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <description>Định nghĩa tính chất các line trong report manual einvoice</description>
    <label>Feature</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>