force-app/main/default/objects/Einvoice_Line__c/fields/Mo_Ta_San_Pham__c.field-meta.xml
<CustomField>
    <fullName>Mo_Ta_San_Pham__c</fullName>
    <formula>IF(  DiscountedAmount__c =0,  Product_Name__c &amp; &apos; (Thanh toán 100% bằng voucher theo CTKM) &apos;,  IF( Don_Gia__c   &gt;0 &amp;&amp;( DiscountedAmount__c/Don_Gia__c   ) &lt;  0.55,Product_Name__c &amp; &apos; (Thanh toán 50% bằng voucher theo CTKM)&apos;, Product_Name__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mo Ta San Pham</label>
    <type>Text</type>
</CustomField>