force-app/main/default/objects/Einvoice_Line__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Einvoice Line</relationshipLabel>
    <relationshipName>Einvoice_Line</relationshipName>
    <type>Lookup</type>
</CustomField>