force-app/main/default/objects/Einvoice_Line__c/fields/ProdPrice__c.field-meta.xml
<CustomField>
    <fullName>ProdPrice__c</fullName>
    <label>ProdPrice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>