force-app/main/default/objects/Einvoice_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Einvoice Line</relationshipLabel>
    <relationshipName>Einvoice_Line</relationshipName>
    <type>Lookup</type>
</CustomField>