force-app/main/default/objects/Einvoice_Line__c/fields/Product_Unit__c.field-meta.xml
<CustomField>
    <fullName>Product_Unit__c</fullName>
    <formula>Text(Product__r.Product_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Unit</label>
    <type>Text</type>
</CustomField>