force-app/main/default/objects/Einvoice_Line__c/fields/Promotion_Item__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Item__c</fullName>
    <formula>IF( Discount_Percent__c   &lt;=  5.45  &amp;&amp;  Discount_Percent__c &gt;= 4.65
       ,  IF(   ISNULL( Einvoice__r.Order__r.Promotion_Item__c ) &lt;&gt; TRUE 
              , Einvoice__r.Order__r.Promotion_Item__r.Name 
              , &apos;Áp dụng chính sách giá ưu đãi cho Khách hàng đặc biệt&apos;
             )
       ,IF( Discount_Percent__c   &lt; 0.55  
                  , NULL
                  ,&apos;Chính sách giá ưu đãi cho Khách hàng đặc biệt&apos;)
         )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promotion Item</label>
    <type>Text</type>
</CustomField>