force-app/main/default/objects/Einvoice_Line__c/fields/SoThuTu__c.field-meta.xml
<CustomField>
    <fullName>SoThuTu__c</fullName>
    <label>SoThuTu</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>