force-app/main/default/objects/Einvoice_Line__c/fields/Total_Exchange_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Exchange_Amount__c</fullName>
    <label>Total Exchange Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>