force-app/main/default/objects/Einvoice_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Product__c</columns>
    <columns>Order_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>